# simple_modbus_server_dummy_endpoint

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  modbus_sim_server.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: device_state_data.json
docs/: components.md  directory-structure.md
tests/: test_runtime_history_sync.py
web_interface/: app.js  index.html  style.css
