[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus-sim-server"
version = "2.3.0"
description = "Advanced Modbus TCP simulation server with a WebSocket-driven web interface."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Philipp" }
]
dependencies = [
  "aiohttp>=3.8,<4",
  "pymodbus>=3.5,<3.13"
]
keywords = ["modbus", "simulation", "pymodbus", "websocket", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Hardware",
  "Topic :: Software Development :: Testing"
]

[project.urls]
Homepage = "https://github.com/your-org/modbus-sim-server"
Issues = "https://github.com/your-org/modbus-sim-server/issues"

[project.scripts]
modbus-sim-server = "modbus_sim_server:run"

[tool.setuptools]
py-modules = ["modbus_sim_server"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["web_interface/*.html", "web_interface/*.js", "web_interface/*.css", "config/*.json"]
